--- a/scripts/Gui/style.css
+++ b/scripts/Gui/style.css
@@ -17,13 +17,10 @@ body {
 
 #ahkTitleBar {
     -webkit-app-region: drag;
+    width: 100%;
+    height: 10%;
 }
-#hi {
-  cursor: pointer;
-  z-index: 1;
-  display: flex;
-  flex-direction: row;
-}
+
 .container {
   width: 100%;
   height: 100%;
@@ -38,19 +35,15 @@ body {
 
 .tabs {
   display: flex;
-  justify-content: space-around;
   background-color: #23233b;
   padding: 8px;
-  gap: 10%;
-  width: 11.75%;
-  position: relative;
-  top: 0;
+  gap: 1%;
+  width: 100%;
 }
 
 .tabs button {
   background-color: #2c2c4d;
   border: none;
-  padding: 8px 100%;
   color: white;
   font-size: 14px;
   cursor: pointer;
@@ -59,7 +52,6 @@ body {
   display: flex;
   align-items: center;
   gap: 6px;
-  width: 25%;
   justify-content: center;
   white-space: nowrap;
   box-shadow: 
@@ -344,6 +336,7 @@ svg {
   max-height: 15%;
   transition: background-color 0.2s, transform 0.2s;
   margin: 3px;
+  -webkit-app-region: no-drag;
 }
 
 .window-controls button:hover {
@@ -357,7 +350,7 @@ svg {
   gap: 12px;
   justify-content: center;
   align-items: center;
-  margin-top: 5%;
+  margin-top: 2%;
 }
 
 .reward-box {
@@ -402,7 +395,7 @@ svg {
   margin-bottom: 20px;
 }
 
-.mode-section h3 {
+h3 {
   margin-top: 0;
   margin-bottom: 12px;
   color: #3c91e6;
