--- a/scripts/Gui/style.css
+++ b/scripts/Gui/style.css
@@ -36,7 +36,7 @@ body {
 .tabs {
   display: flex;
   background-color: #23233b;
-  padding: 8px;
+  padding: 4px;
   gap: 1%;
   width: 100%;
 }
@@ -48,6 +48,8 @@ body {
   font-size: 14px;
   cursor: pointer;
   border-radius: 6px;
+  padding: 1.5% 2%;
+  width: 15.75%;
   transition: all 0.2s ease;
   display: flex;
   align-items: center;
